--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ h6 {
   width: 100%;
   height: 100vh;
   background: url("https://res.cloudinary.com/dlt3i0ddc/image/upload/v1714986559/me_utzg6h.jpg") top center;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
 }
 
