--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,11 +460,41 @@ section {
   height: 10px;
 }
 
-.skills .progress-bar {
+.skills .progress-bar1 {
   width: 1px;
   height: 10px;
   transition: 0.9s;
   background-color: #149ddd;
+}
+.skills .progress-bar2 {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #06151c;
+}
+.skills .progress-bar3 {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #16dfaa;
+}
+.skills .progress-bar4 {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #18103e;
+}
+.skills .progress-bar5 {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #ca1f1c;
+}
+.skills .progress-bar6 {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #42cb67;
 }
 
 /*--------------------------------------------------------------
