--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://res.cloudinary.com/dlt3i0ddc/image/upload/v1714986559/me_utzg6h.jpg") top center;
+  background: url("https://i.im.ge/2024/05/14/ZeH0m0.istockphoto-1418234033-612x612.jpeg") top center;
   background-size: contain;
   background-repeat: no-repeat;
 }
