--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,8 +241,9 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://i.im.ge/2024/05/14/Ze47P8.me-standing-sideways.jpeg") top center;
+  background: url("https://i.im.ge/2024/05/14/Ze4Nkf.me-standing-alongways.jpeg") top center;
   background-size: contain;
+  object-fit:cover;
   background-repeat: no-repeat;
 }
 
