--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://i.im.ge/2024/05/14/Ze4Nkf.me-standing-alongways.jpeg") top center;
+  background: url("https://i.im.ge/2024/05/14/Ze4hRD.me-stan.jpeg") top center;
   background-size: contain;
   object-fit:cover;
   background-repeat: no-repeat;
