--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,8 +242,7 @@ h6 {
   width: 100%;
   height: 100vh;
   background: url("https://i.im.ge/2024/05/14/Ze4hRD.me-stan.jpeg") top center;
-  background-size: contain;
-  object-fit:cover;
+  object-fit:fill;
   background-repeat: no-repeat;
 }
 
