--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,8 +242,10 @@ h6 {
   width: 100%;
   height: 100vh;
   background: url("https://i.im.ge/2024/05/14/Ze4hRD.me-stan.jpeg") top center;
-  object-fit:fill;
+  background-size:cover;
   background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-position: center:
 }
 
 #hero:before {
